# Python_web_DZ2

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  __init__.py  commands.py  main.py  pyproject.toml  requirements.txt  setup.py  validations.py
address_book/: address_book.py  address_book_record.py
class_fields/: __init__.py  address.py  date.py  mail.py  name.py  phone.py
databases/: address_book.csv
handlers/address_book/: add_contact.py  find_contact.py  remove_contact.py  show_birthday.py
handlers/sort_file/: sort_file.py
notes/: note_record.py  notes.py
serializers/: date_serializer.py  serializer.py
serializers/address_book/: address_book_csv_serializer.py
sort_file/: clean.py  file_parser.py  file_sorter.py
storages/: csv_storage.py  storage.py
user_assistant/: commands.py  main.py
user_assistant/address_book/: address_book.py  address_book_record.py
user_assistant/class_fields/: address.py  author.py  date.py  date_time.py  field.py  id.py  mail.py  name.py  phone.py  tag.py  text.py
user_assistant/console/: console.py
user_assistant/console/table_format/: address_book_table.py  notes_table.py
user_assistant/databases/: address_book.csv
user_assistant/handlers/: do_exit.py  greeting.py  help.py  input_value.py
user_assistant/handlers/address_book/: add_contact.py  add_phone.py  edit_contact.py  edit_phone.py  find_contact.py  remove_contact.py  (+5 more)
user_assistant/notes/: note_record.py  notes.py
user_assistant/sort_file/: file_parser.py  file_sorter.py  normalize.py
user_assistant/storages/: csv_storage.py  storage.py
(+19 files in other folders)
